--- a/RealState/css/styles.css
+++ b/RealState/css/styles.css
@@ -15,6 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 header {
