--- a/RealState/css/customIncrementTextbox.css
+++ b/RealState/css/customIncrementTextbox.css
@@ -88,3 +88,29 @@ The structure for your increment textbox should look like this in order for this
     margin-top: -10px;
 }
 
+@media (max-width: 1920px) {
+    
+    #dashboard .input .textbox-increment input {
+        width: 300px;
+        height: 40px;
+        border: 1px solid var(--i);
+        font-size: 16px;
+    }
+    
+    #dashboard .input .textbox-increment>span {
+        font-size: 16px;
+    }
+    
+    #dashboard .input .textbox-increment .inc-dec-button {
+        right: 15px;
+        top: 10px;
+        gap: 20px;
+    }
+    
+    #dashboard .input .textbox-increment .inc-dec-button span {
+        /* background: var(--i); */
+        font-size: 20px;
+        border: 1px solid var(--i);
+    }
+}
+
