--- a/RealState/css/economicSec.css
+++ b/RealState/css/economicSec.css
@@ -66,3 +66,13 @@ section .container {
     color: white;
     font-size: 20px;
 }
+
+@media (max-width: 1920px) {
+    #dashboard .cost-info-input .input>span {
+        font-size: 20px;
+    }
+    
+    #dashboard .cost-info-input .input .text {
+        font-size: 16px;
+    }
+}
