--- a/RealState/css/customTextBox.css
+++ b/RealState/css/customTextBox.css
@@ -25,11 +25,11 @@ The structure for your text box should look like this in order for this style to
     --font-size: 20px;
 }
 
-#dashboard .input .textbox {
+#economic .input .textbox {
     position: relative;
 }
 
-#dashboard .input .textbox input {
+#economic .input .textbox input {
     width: 400px;
     height: 50px;
     cursor: pointer;
@@ -43,7 +43,7 @@ The structure for your text box should look like this in order for this style to
     font-size: var(--font-size);
 }
 
-#dashboard .input .textbox span {
+#economic .input .textbox span {
     position: absolute;
     font-size: var(--font-size);
     left: 30px;
@@ -54,12 +54,12 @@ The structure for your text box should look like this in order for this style to
     transition: 0.5s;
 }
 
-#dashboard .input .textbox input:focus {
+#economic .input .textbox input:focus {
     outline: none;
 }
 
-#dashboard .input .textbox input:focus ~ span,
-#dashboard .input .textbox input.has-content ~ span {
+#economic .input .textbox input:focus ~ span,
+#economic .input .textbox input.has-content ~ span {
     font-size: 12px;
     top: 0;
     left: 20px;
