Fixed media screen

--- a/RealState/css/customTextBox.css
+++ b/RealState/css/customTextBox.css
@@ -71,7 +71,7 @@ The structure for your text box should look like this in order for this style to
 
 @media (max-width:1920px) {
 
-    #dashboard .input .textbox input {
+    #economic .input .textbox input {
         width: 300px;
         height: 40px;
         border: 1px solid var(--i);
@@ -79,7 +79,7 @@ The structure for your text box should look like this in order for this style to
         font-size: 16px;
     }
 
-    #dashboard .input .textbox span {
+    #economic .input .textbox span {
         font-size: 16px;
     }
 }
