--- a/RealState/css/customIncrementTextbox.css
+++ b/RealState/css/customIncrementTextbox.css
@@ -90,24 +90,24 @@ The structure for your increment textbox should look like this in order for this
 
 @media (max-width: 1920px) {
     
-    #dashboard .input .textbox-increment input {
+    #economic .input .textbox-increment input {
         width: 300px;
         height: 40px;
         border: 1px solid var(--i);
         font-size: 16px;
     }
     
-    #dashboard .input .textbox-increment>span {
+    #economic .input .textbox-increment>span {
         font-size: 16px;
     }
     
-    #dashboard .input .textbox-increment .inc-dec-button {
+    #economic .input .textbox-increment .inc-dec-button {
         right: 15px;
         top: 10px;
         gap: 20px;
     }
     
-    #dashboard .input .textbox-increment .inc-dec-button span {
+    #economic .input .textbox-increment .inc-dec-button span {
         /* background: var(--i); */
         font-size: 20px;
         border: 1px solid var(--i);
