New Project Created -ModernUI

--- a/ModernUI/css/body.css
+++ b/ModernUI/css/body.css
@@ -7,8 +7,15 @@
     --dark-grey-color: #1D2C33;
     --grey-color: #5E7177;
     --grey-blue-color: #ADB7B8;
+    --grey-light-color: #C5C8C1;
+
+    --font-normal: 26px;
+    --font-small: 18px;
+    --font-icons: 40px;
 }
 
 body {
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
