--- a/ModernUI/css/header.css
+++ b/ModernUI/css/header.css
@@ -1,6 +1,6 @@
 
 header.top-bar {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 70px;
     background: transparent;
