--- a/ModernUI/css/body.css
+++ b/ModernUI/css/body.css
@@ -1,6 +1,10 @@
 
 * {
-    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 :root {
