--- a/ModernUI/css/property_sec.css
+++ b/ModernUI/css/property_sec.css
@@ -88,7 +88,7 @@
 
 #property-section input {
     width: 300px;
-    height: 40px;
+    height: 45px;
     border-radius: 30px;
     border: 0;
     background: var(--grey-light-color);
@@ -144,7 +144,33 @@
 
 #property-section footer {
     grid-area: footer;
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 100px;
     background: white;    
+    box-shadow: inset 0px 5px 30px rgba(0,0,0,0.2);
+}
+
+#property-section footer div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px;
+    border-radius: 20px;
+    width: 400px;
+    height: 250px;
+    background: var(--grey-light-color);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.2);
+}
+
+#property-section footer div h3 {
+    font-size: var(--font-normal);
+}
+
+#property-section footer div p {
+    text-align: center;
+    font-size: 18px;
 }
