--- a/ModernUI/css/expenses_sec.css
+++ b/ModernUI/css/expenses_sec.css
@@ -101,10 +101,23 @@
 
 #expenses-section .image {
     grid-area: image;
+    display: flex;
+    justify-content: center;
 }
 
 #expenses-section .image img {
-    width: 1000px;
-    height: auto;
+    width: 700px;
+    height: 700px;
     border-radius: 30px;
+}
+
+#expenses-section .inputs div>span:last-child {
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+#expenses-section .inputs div>span:last-child:hover {
+    font-size: 2.5em;
+    font-weight: 800;
+    transition: 0.5s;
 }
