--- a/CustomElements/css/customStyles.css
+++ b/CustomElements/css/customStyles.css
@@ -84,3 +84,30 @@ body {
     background-color: var(--clr);
 }
 
+/* Progress Bar */
+.progress-bar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background: #111;
+    width: 800px;
+    height: 3em;
+    border-radius: 1.5em;
+}
+
+.progress-bar::before {
+    position: absolute;
+    content: attr(data-label);
+    left: 0.5em;
+    bottom: 0.5em;
+    top: 0.5em;
+    padding-left: 1em;
+    padding-top: 0.2em;
+    color: white;
+    width: calc(100% - 2em);
+    min-width: 2em;
+    background: rgb(18, 134, 201);
+    border-radius: 1em;
+    font-size: 1.2em;
+}
+
