Added responsive elements for 1920

--- a/ModernUI/css/loan_sec.css
+++ b/ModernUI/css/loan_sec.css
@@ -79,117 +79,22 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    gap: 50px;
-    padding-left: 13px;
+    gap: 2em;
 }
 
-#loan-section .input .inputs-entry>div input {
-    width: 100%;
-    height: 45px;
-    border: none;
-    background: var(--grey-blue-color);
-    border-radius: 30px;
-    outline: none;
-    text-align: center;
-    font-size: 1.5em;
+#loan-section .input .inputs-entry>div:last-child {
+    justify-content: left;
+    gap: 10em;
+}
+
+#loan-section .input .inputs-entry>div span:first-child {
+    font-size: 2.5em;
     font-weight: 600;
-    color: var(--dark-grey-color);
-}
-
-#loan-section .input .inputs-entry>div div {
-    position: relative;
-    display: flex;
-    width: 450px;
-    justify-content: center;
-    align-items: center;
-}
-
-#loan-section .input .inputs-entry>div div>span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-size: 1.5em;
-    font-weight: 600;
-    color: var(--dark-grey-color);
-    transition: 0.5s;
-    pointer-events: none;
-    text-wrap: nowrap;
-}
-
-#loan-section .inputs-entry>div>span {
-    font-size: 3em;
-    font-weight: 800;
-    pointer-events: none;
-}
-
-#loan-section .inputs-entry>div input.active ~ span,
-#loan-section .inputs-entry>div input[type='text']:focus ~ span {
-    font-size: 1em;
-    top: -5px;
-    background: var(--grey-blue-color);
-    padding: 0 10px;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    transition: 0.5s;
-}
-
-#loan-section .inputs-entry>div input[type='checkbox'] {
-    display: none;
-}
-
-#loan-section .inputs-entry>div:last-child {
-    justify-content: flex-start;
-    padding-left: 0px;
-    gap: 200px;
-}
-
-#loan-section .inputs-entry>div:last-child>span {
-    font-size: 3em;
     text-align: center;
 }
 
-#loan-section .inputs-entry>div:last-child>span .text {
-    font-size: 0.3em;
-}
-
-#loan-section .inputs-entry>div:last-child label {
-    position: relative;
-}
-
-#loan-section .inputs-entry>div:last-child label span {
-    position: absolute;
-    background: white;
-    width: 80px;
-    height: 40px;
-    border-radius: 30px;
-    border: 2px solid var(--dark-grey-color);
-    box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-#loan-section .inputs-entry>div:last-child label b {
-    position: absolute;
-    background: white;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid var(--dark-grey-color);
-    z-index: 1;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-#loan-section .inputs-entry>div:last-child input:checked ~ b {
-    transform: translateX(40px);
-    transition: 0.5s;
-}
-
-#loan-section .inputs-entry>div:last-child input:checked ~ span {
-    background: rgb(138, 213, 138);
-    transition: 0.5s;
+#loan-section .input .inputs-entry>div span.text {
+    font-size: 0.5em;
+    font-weight: 600;
+    text-align: center;
 }
