--- a/CustomElements/css/customStyles.css
+++ b/CustomElements/css/customStyles.css
@@ -165,3 +165,46 @@ body {
         bottom: 0px;
     }
 }
+
+/* Textbox Style 2 */
+.textbox-style.style-2 {
+    --clr-1: #999;
+    --clr-2: #fff;
+    position: relative;
+    border: none;
+    border-radius: 1.5em;
+    background: var(--clr-1);
+}
+
+.textbox-style.style-2 input {
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    font-size: 1em;
+    text-align: center;
+    color: var(--clr-2);
+    font-weight: 600;
+}
+
+.textbox-style.style-2 span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: var(--clr-2);
+    font-weight: 600;
+    transition: 0.5s;
+}
+
+.textbox-style.style-2 input:focus ~ span {
+    top: -0.3em;
+    font-size: 0.8em;
+    background: var(--clr-1);
+    padding: 0 10px;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    font-weight: 500;
+    transition: 0.5s;
+}
