--- a/ModernUI/css/expenses_sec.css
+++ b/ModernUI/css/expenses_sec.css
@@ -38,65 +38,9 @@
     gap: 25px;
 }
 
-#expenses-section .inputs div>span {
+#expenses-section .inputs div>span:first-child {
     font-size: 2em;
     font-weight: 600;
-}
-
-#expenses-section .inputs div .textbox {
-    position: relative;
-    width: 500px;
-}
-
-#expenses-section .inputs div .textbox span {
-    position: absolute;
-    font-size: 1.5em;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-weight: 600;
-}
-
-#expenses-section .inputs div .textbox input {
-    width: 100%;
-    height: 45px;
-    border: none;
-    border-radius: 30px;
-    background: var(--dark-grey-color);
-    outline: none;
-    text-align: center;
-    font-size: 1.5em;
-    font-weight: 600;
-    color: white;
-}
-
-#expenses-section .inputs div .textbox span {
-    color: white;
-    pointer-events: none;
-    transition: 0.5s;
-}
-
-#expenses-section .inputs div:first-child .textbox input {
-    width: 100%;
-    height: 45px;
-    border: none;
-    border-radius: 30px;
-    background: var(--grey-light-color);
-}
-
-#expenses-section .inputs div:first-child .textbox span {
-    color: var(--dark-grey-color);
-}
-
-#expenses-section .inputs div .textbox input.active ~ span,
-#expenses-section .inputs div .textbox input:focus ~ span {
-    font-size: 1em;
-    top: -5px;
-    transition: 0.5s;
-    background: var(--dark-grey-color);
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    padding: 0 10px;
 }
 
 #expenses-section .image {
@@ -111,7 +55,9 @@
     border-radius: 30px;
 }
 
-#expenses-section .inputs div>span:last-child {
+#expenses-section .inputs div>span:nth-child(3) {
+    font-size: 2em;
+    font-weight: 600;
     cursor: pointer;
     transition: 0.5s;
 }
@@ -120,4 +66,23 @@
     font-size: 2.5em;
     font-weight: 800;
     transition: 0.5s;
+}
+
+#expenses-section .inputs div:first-child .mortgage-label {
+    background: #C5C8C1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2.5em;
+    border-radius: 1.25em;
+    width: 400px;
+}
+
+#expenses-section .inputs div:first-child .mortgage-label .text {
+    font-size: 1em;
+    color: #1D2C33;
+    pointer-events: none;
+    /* font-size: 2.5em;
+    font-weight: 800;
+    transition: 0.5s; */
 }
